Xml_to_Json done bgd  😉😉

--- a/Xml_to_Json/Xml_to_Json/Xml_to_Json.vcxproj.filters
+++ b/Xml_to_Json/Xml_to_Json/Xml_to_Json.vcxproj.filters
@@ -15,8 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="Xml_Json.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Xml_to_Json.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
