--- a/Xml_to_Json/Xml_to_Json/Xml_to_Json.vcxproj
+++ b/Xml_to_Json/Xml_to_Json/Xml_to_Json.vcxproj
@@ -139,7 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Xml_Json.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Xml_to_Json.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
