adding comments to Xml_to_Json

--- a/Xml_to_Json/Xml_to_Json/Xml_to_Json.vcxproj.filters
+++ b/Xml_to_Json/Xml_to_Json/Xml_to_Json.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Xml_Json.cpp">
+    <ClCompile Include="Xml_to_Json.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
