--- a/Xml_to_Json/Xml_to_Json/Xml_to_Json.vcxproj
+++ b/Xml_to_Json/Xml_to_Json/Xml_to_Json.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{04b4ae3e-e1b3-49dd-ac92-cc04d9912832}</ProjectGuid>
+    <ProjectGuid>{f5028b4c-63d9-4ffe-8543-86e32ab2cd07}</ProjectGuid>
     <RootNamespace>XmltoJson</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Xml_Json.cpp" />
+    <ClCompile Include="Xml_to_Json.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Xml_to_Json.h" />
