--- a/Xml_to_Json/Xml_to_Json/Xml_to_Json.vcxproj.filters
+++ b/Xml_to_Json/Xml_to_Json/Xml_to_Json.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Xml_to_Json.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Validity_checker\isValid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Xml_to_Json.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Validity_checker\isValid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
