--- a/Xml_to_Graph/Xml_to_Graph/Xml_to_Graph.vcxproj.filters
+++ b/Xml_to_Graph/Xml_to_Graph/Xml_to_Graph.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Xml_to_Graph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\parseXML\parseXML.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Xml_to_Graph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\parseXML\parseXML.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
